--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>java-tomcat-maven-example</artifactId>
+  <artifactId>java-web-app</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Java Tomcat Maven Example</name>
+  <name>java-web-app</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
@@ -21,7 +21,7 @@
   </dependencies>
 
   <build>
-    <finalName>java-tomcat-maven-example</finalName>
+    <finalName>java-web-app</finalName>
 
     <plugins>
       <!-- WAR Plugin -->
